--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -1,5 +1,26 @@
 .story {
     font-size: 1.4em;
-    background-color: rgb(144, 196, 172);
-    padding: 10px;
+    text-align: center;
+    font-family:Arial, Helvetica, sans-serif;
+    background-image: url('../images/dirt.jpg');    
+    width:fit-content;
+    height:fit-content;
+    border-style: double;
+    border-width: 10px;
+    border-color: rgb(70, 50, 13);
+    padding: 1em;
+
+}
+
+.nameEntry {
+    text-align: center;
+    font-family:Arial, Helvetica, sans-serif;
+    background-image: url('../images/dirt.jpg');    
+    width:fit-content;
+    height:fit-content;
+    border-style: double;
+    border-width: 10px;
+    border-color: rgb(70, 50, 13);
+    padding: 1em;
+
 }
