--- a/src/routes/Market.css
+++ b/src/routes/Market.css
@@ -1,19 +1,49 @@
 .welcome {
     text-align: center;
-    font-family:Arial, Helvetica, sans-serif
+    font-family:Arial, Helvetica, sans-serif;
+    background-image: url('../images/dirt.jpg');    
+    width:fit-content;
+    height:fit-content;
+    border-style: double;
+    border-width: 10px;
+    border-color: rgb(70, 50, 13);
+    padding: 1em;
+
+
+}
+
+.oneLine {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .inventory {
     display: flex;
+    flex-direction: row;
     justify-content: center;
     gap: 100px;
     font-size: 1.7em;
+    background-image: url('../images/dirt.jpg');
+    width:fit-content;
+    height:fit-content;
+    border-style: double;
+    border-width: 10px;
+    border-color: rgb(70, 50, 13);
+    padding: 1em;
 }
 
 .selectedSpell {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     font-size: 1.4em;
+    background-image: url('../images/dirt.jpg');
+    width:fit-content;
+    height:fit-content;
+    border-style: double;
+    border-width: 10px;
+    border-color: rgb(70, 50, 13);
+
+    padding: 1em;
 }
 
 .buttons {
@@ -21,6 +51,10 @@
     justify-content: center;
     gap: 100px;
     font-size: 1.1em;
+    background-image: url('../images/dirt.jpg');
+    width:fit-content;
+    height:fit-content;
+    padding: 1em;
 }
 
 .errorMessage {
