--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -9,10 +9,19 @@
     border-width: 10px;
     border-color: rgb(70, 50, 13);
     padding: 1em;
+    margin:auto;
+}
 
+.createCharacter {
+    display: flex;
+    justify-content: center;
+    gap: 150px;
+    font-size: 1.2em;
+    margin: auto;
 }
 
 .nameEntry {
+    font-size: 1.2em;
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
     background-image: url('../images/dirt.jpg');    
@@ -22,5 +31,4 @@
     border-width: 10px;
     border-color: rgb(70, 50, 13);
     padding: 1em;
-
 }
