--- a/src/routes/Market.css
+++ b/src/routes/Market.css
@@ -79,4 +79,13 @@
 .errorMessage {
     justify-content: center;
     font-size: 1.7em;
+    background-image: url('../images/dirt.jpg');
+    width:fit-content;
+    height:fit-content;
+    padding: 1em;
+    border-style: double;
+    border-width: 10px;
+    border-color: rgb(70, 50, 13);
+    margin:auto;
+
 }
