--- a/src/routes/Woods.css
+++ b/src/routes/Woods.css
@@ -25,10 +25,15 @@ body {
     font-size: 1.7em;
 }
 
-.monster {
-    display: flex;
-    flex-direction: column;
+.monster, .action {
     justify-content: center;
-    font-size: 1.4em;
-    background-color: rgb(160, 114, 95);
+    font-size: 1.7em;
+    background-image: url('../images/dirt.jpg');
+    width:fit-content;
+    height:fit-content;
+    padding: 1em;
+    border-style: double;
+    border-width: 10px;
+    border-color: rgb(70, 50, 13);
+    margin:auto;
 }
