--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -1,27 +1,39 @@
+.page {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.intro {
+    display: flex;
+    justify-content: center;
+    gap: 150px;
+}
+
 .story {
     font-size: 1.4em;
-    text-align: center;
     font-family:Arial, Helvetica, sans-serif;
     background-image: url('../images/dirt.jpg');    
-    width:fit-content;
+    width: 500px;
     height:fit-content;
     border-style: double;
     border-width: 10px;
     border-color: rgb(70, 50, 13);
     padding: 1em;
-    margin:auto;
 }
 
 .createCharacter {
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    gap: 150px;
+    gap: 50px;
     font-size: 1.2em;
-    margin: auto;
+    align-self:flex-start;
 }
 
 .nameEntry {
     font-size: 1.2em;
+    margin:auto;
     text-align: center;
     font-family:Arial, Helvetica, sans-serif;
     background-image: url('../images/dirt.jpg');    
