--- a/src/components/Stats.css
+++ b/src/components/Stats.css
@@ -1,7 +1,7 @@
 .Stats {
     text-align: center;
     background-image: url('../images/dirt.jpg');    
-    width:fit-content;
+    width:260px;
     height:fit-content;
     border-style: double;
     border-width: 10px;
