--- a/src/routes/Woods.css
+++ b/src/routes/Woods.css
@@ -11,11 +11,10 @@ body {
 .woodsInventory {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content:center;
     margin:auto;
-    gap: 10px;
     background-image: url('../images/dirt.jpg');
-    width:220px;
+    width:270px;
     height:auto;
     border-style: double;
     border-width: 10px;
@@ -26,6 +25,7 @@ body {
 
 .woodsButtons {
     display: flex;
+    opacity: 75%;
     justify-content: center;
     gap: 100px;
     margin: auto;
@@ -42,7 +42,7 @@ body {
     gap: 10px;
     margin: auto;
     background-image: url('../images/dirt.jpg');
-    width:fit-content;
+    width:285px;
     height:fit-content;
     border-style: double;
     border-width: 10px;
@@ -65,7 +65,8 @@ body {
 
 .twoColumns {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    gap: 10px;
     flex-basis: 100%;
     flex: 2;
 }
@@ -73,14 +74,16 @@ body {
 .errorMessage {
     display: flex;
     justify-content: center;
-    font-size: 1.7em;
+    font-size: 1.5em;
+    font-weight: bold;
+    width: 265px;
 }
 
 .action {
     justify-content: left;
     font-size: 1.7em;
     background-image: url('../images/dirt.jpg');
-    width:fit-content;
+    width:275px;
     height:fit-content;
     padding: 1em;
     border-style: double;
@@ -91,9 +94,9 @@ body {
 
 .monster {
     align-items: flex-start;
-    font-size: 1.7em;
+    font-size: 1.5em;
     background-image: url('../images/dirt.jpg');
-    width:fit-content;
+    width:270px;
     height:fit-content;
     padding: 1em;
     border-style: double;
